--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
       primaryClass={cs.CL}
 }
 @article{10.1145/3596251,
-author = {Lyu, Yue and An, Pengcheng and Xiao, Yage and Zhang, Zibo and Zhang, Huan and Katsuragawa, Keiko and Zhao, Jian},
+author = {Lyu, Yue and An, Pengcheng ... Zhang, Huan and Katsuragawa, Keiko and Zhao, Jian},
 title = {Eggly: Designing Mobile Augmented Reality Neurofeedback Training Games for Children with Autism Spectrum Disorder},
 year = {2023},
 issue_date = {June 2023},
