--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,15 +5,17 @@
       title={HoneyBee: Progressive Instruction Finetuning of Large Language Models for Materials Science}, 
       author={Yu Song and Santiago Miret and Huan Zhang and Bang Liu},
       year={2023},
+      selected = {true},
       eprint={2310.08511},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
 @article{10.1145/3596251,
-author = {Lyu, Yue and An, Pengcheng and ... Zhang, Huan and Katsuragawa, Keiko and Zhao, Jian},
+author = {Yue Lyu and Pengcheng An ... Huan Zhang and Katsuragawa, Keiko and Zhao, Jian},
 title = {Eggly: Designing Mobile Augmented Reality Neurofeedback Training Games for Children with Autism Spectrum Disorder},
 year = {2023},
 issue_date = {June 2023},
+selected = {true},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 volume = {7},
