--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,23 @@
 ---
 ---
 
+Buttons:
+- `abbr`: Adds an abbreviation to the left of the entry. You can add links to these by creating a venue.yaml-file in the _data folder and adding entries that match.
+- `abstract`: Adds an "Abs" button that expands a hidden text field when clicked to show the abstract text
+- `arxiv`: Adds a link to the Arxiv website (Note: only add the arxiv identifier here - the link is generated automatically)
+- `bibtex_show`: Adds a "Bib" button that expands a hidden text field with the full bibliography entry
+- `html`: Inserts an "HTML" button redirecting to the user-specified link
+- `pdf`: Adds a "PDF" button redirecting to a specified file (if a full link is not specified, the file will be assumed to be placed in the /assets/pdf/ directory)
+- `supp`: Adds a "Supp" button to a specified file (if a full link is not specified, the file will be assumed to be placed in the /assets/pdf/ directory)
+- `blog`: Adds a "Blog" button redirecting to the specified link
+- `code`: Adds a "Code" button redirecting to the specified link
+- `poster`: Adds a "Poster" button redirecting to a specified file (if a full link is not specified, the file will be assumed to be placed in the /assets/pdf/ directory)
+- `video`: Adds a "Video" button redirecting to a specified file (if a full link is not specified, the file will be assumed to be placed in the /assets/video/ directory)
+- `slides`: Adds a "Slides" button redirecting to a specified file (if a full link is not specified, the file will be assumed to be placed in the /assets/pdf/ directory)
+- `website`: Adds a "Website" button redirecting to the specified link
+- `altmetric`: Adds an [Altmetric](https://www.altmetric.com/) badge (Note: if DOI is provided just use `true`, otherwise only add the altmetric identifier here - the link is generated automatically)
+- `dimensions`: Adds a [Dimensions](https://www.dimensions.ai/) badge (Note: if DOI or PMID is provided just use `true`, otherwise only add the Dimensions' identifier here - the link is generated automatically)
+
 @misc{song2023honeybee,
       title={HoneyBee: Progressive Instruction Finetuning of Large Language Models for Materials Science}, 
       author={Yu Song and Santiago Miret and Huan Zhang and Bang Liu},
@@ -10,23 +27,27 @@
       eprint={2310.08511},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
+      altmetric = {false}
+      dimensions = {false}
+      pdf ={https://arxiv.org/pdf/2310.08511.pdf}
 }
 @article{10.1145/3596251,
 author = {Yue Lyu and Pengcheng An ... Huan Zhang and Katsuragawa, Keiko and Zhao, Jian},
 title = {Eggly: Designing Mobile Augmented Reality Neurofeedback Training Games for Children with Autism Spectrum Disorder},
-year = {2023},
-issue_date = {June 2023},
-selected = {true},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {7},
-number = {2},
-url = {https://doi.org/10.1145/3596251},
-doi = {10.1145/3596251},
-abstract = {Autism Spectrum Disorder (ASD) is a neurodevelopmental disorder that affects how children communicate and relate to other people and the world around them. Emerging studies have shown that neurofeedback training (NFT) games are an effective and playful intervention to enhance social and attentional capabilities for autistic children. However, NFT is primarily available in a clinical setting that is hard to scale. Also, the intervention demands deliberately-designed gamified feedback with fun and enjoyment, where little knowledge has been acquired in the HCI community. Through a ten-month iterative design process with four domain experts, we developed Eggly, a mobile NFT game based on a consumer-grade EEG headband and a tablet. Eggly uses novel augmented reality (AR) techniques to offer engagement and personalization, enhancing their training experience. We conducted two field studies (a single-session study and a three-week multi-session study) with a total of five autistic children to assess Eggly in practice at a special education center. Both quantitative and qualitative results indicate the effectiveness of the approach as well as contribute to the design knowledge of creating mobile AR NFT games.},
-journal = {Proc. ACM Interact. Mob. Wearable Ubiquitous Technol.},
-month = {jun},
-articleno = {67},
-numpages = {29},
-keywords = {Autism spectrum disorder, EEG headband, augmented reality, mobile game, neurofeedback training}
+      year = {2023},
+      issue_date = {June 2023},
+      selected = {true},
+      publisher = {Association for Computing Machinery},
+      url = {https://doi.org/10.1145/3596251},
+      doi = {10.1145/3596251},
+      abstract = {Autism Spectrum Disorder (ASD) is a neurodevelopmental disorder that affects how children communicate and relate to other people and the world around them. Emerging studies have shown that neurofeedback training (NFT) games are an effective and playful intervention to enhance social and attentional capabilities for autistic children. However, NFT is primarily available in a clinical setting that is hard to scale. Also, the intervention demands deliberately-designed gamified feedback with fun and enjoyment, where little knowledge has been acquired in the HCI community. Through a ten-month iterative design process with four domain experts, we developed Eggly, a mobile NFT game based on a consumer-grade EEG headband and a tablet. Eggly uses novel augmented reality (AR) techniques to offer engagement and personalization, enhancing their training experience. We conducted two field studies (a single-session study and a three-week multi-session study) with a total of five autistic children to assess Eggly in practice at a special education center. Both quantitative and qualitative results indicate the effectiveness of the approach as well as contribute to the design knowledge of creating mobile AR NFT games.},
+      journal = {Proc. ACM Interact. Mob. Wearable Ubiquitous Technol.},
+      month = {jun},
+      articleno = {67},
+      numpages = {29},
+      keywords = {Autism spectrum disorder, EEG headband, augmented reality, mobile game, neurofeedback training}
+      altmetric = {false}
+      dimensions = {false}
+      pdf = {https://www.jeffjianzhao.com/papers/eggly.pdf}
+
 }
