--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,10 +26,10 @@ Buttons:
       selected = {true},
       eprint={2310.08511},
       archivePrefix={arXiv},
-      primaryClass={cs.CL}
-      altmetric = {false}
-      dimensions = {false}
-      pdf ={https://arxiv.org/pdf/2310.08511.pdf}
+      primaryClass={cs.CL},
+      altmetric = {false},
+      dimensions = {false},
+      pdf = {https://arxiv.org/pdf/2310.08511.pdf}
 }
 @article{10.1145/3596251,
 author = {Yue Lyu and Pengcheng An ... Huan Zhang and Katsuragawa, Keiko and Zhao, Jian},
@@ -45,9 +45,9 @@ title = {Eggly: Designing Mobile Augmented Reality Neurofeedback Training Games 
       month = {jun},
       articleno = {67},
       numpages = {29},
-      keywords = {Autism spectrum disorder, EEG headband, augmented reality, mobile game, neurofeedback training}
-      altmetric = {false}
-      dimensions = {false}
+      keywords = {Autism spectrum disorder, EEG headband, augmented reality, mobile game, neurofeedback training},
+      altmetric = {false},
+      dimensions = {false},
       pdf = {https://www.jeffjianzhao.com/papers/eggly.pdf}
 
 }
