--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,6 +31,10 @@ Buttons:
       abbr = {EMNLP 2023},
       dimensions = {false},
       pdf = {https://arxiv.org/pdf/2310.08511.pdf}
+      bibtex_show = true,
+      journal = {}
+      j
+   
 }
 @article{10.1145/3596251,
 author = {Yue Lyu and Pengcheng An ... Huan Zhang and Katsuragawa, Keiko and Zhao, Jian},
