--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@ Buttons:
       dimensions = {false},
       pdf = {https://arxiv.org/pdf/2310.08511.pdf}
       bibtex_show = true,
-      journal = {}
+      journal = {The 2023 Conference on Empirical Methods in Natural Language Processing.}
       j
    
 }
