--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@ Buttons:
       altmetric = {false},
       abbr = {EMNLP 2023},
       dimensions = {false},
-      pdf = {https://arxiv.org/pdf/2310.08511.pdf}
+      pdf = {https://arxiv.org/pdf/2310.08511.pdf},
       bibtex_show = true,
       journal = {The 2023 Conference on Empirical Methods in Natural Language Processing.}
       j
