--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,9 +30,7 @@ Buttons:
       dimensions = {false},
       pdf = {https://arxiv.org/pdf/2310.08511.pdf},
       bibtex_show = {true},
-      journal = {The 2023 Conference on Empirical Methods in Natural Language Processing.},
-      j
-   
+      journal = {The 2023 Conference on Empirical Methods in Natural Language Processing.}
 }
 @article{10.1145/3596251,
 author = {Yue Lyu and Pengcheng An ... Huan Zhang and Katsuragawa, Keiko and Zhao, Jian},
