--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@ Buttons:
 - `altmetric`: Adds an [Altmetric](https://www.altmetric.com/) badge (Note: if DOI is provided just use `true`, otherwise only add the altmetric identifier here - the link is generated automatically)
 - `dimensions`: Adds a [Dimensions](https://www.dimensions.ai/) badge (Note: if DOI or PMID is provided just use `true`, otherwise only add the Dimensions' identifier here - the link is generated automatically)
 
-@misc{song2023honeybee,
+@article{song2023honeybee,
       title={HoneyBee: Progressive Instruction Finetuning of Large Language Models for Materials Science}, 
       author={Yu Song and Santiago Miret and Huan Zhang and Bang Liu},
       year={2023},
@@ -29,7 +29,6 @@ Buttons:
       abbr = {EMNLP 2023},
       dimensions = {false},
       pdf = {https://arxiv.org/pdf/2310.08511.pdf},
-      bibtex_show = {true},
       journal = {The 2023 Conference on Empirical Methods in Natural Language Processing.}
 }
 @article{10.1145/3596251,
