--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,6 +19,21 @@ Buttons:
 - `dimensions`: Adds a [Dimensions](https://www.dimensions.ai/) badge (Note: if DOI or PMID is provided just use `true`, otherwise only add the Dimensions' identifier here - the link is generated automatically)
 
 @article{song2023honeybee,
+      title={HoneyComb: A Flexible LLM-Based Agent System for Materials Science}, 
+      author={Huan Zhang and Yu Song and Ziyu Hou and Santiago Miret and Bang Liu},
+      year={2024},
+      abstract = {The emergence of specialized large language models (LLMs) has shown promise in addressing complex tasks for materials science. Many LLMs, however, often struggle with distinct complexities of material science tasks, such as materials science computational tasks, and often rely heavily on outdated implicit knowledge, leading to inaccuracies and hallucinations. To address these challenges, we introduce HoneyComb, the first LLM-based agent system specifically designed for materials science. HoneyComb leverages a novel, high-quality materials science knowledge base (MatSciKB) and a sophisticated tool hub (ToolHub) to enhance its reasoning and computational capabilities tailored to materials science. MatSciKB is a curated, structured knowledge collection based on reliable literature, while ToolHub employs an Inductive Tool Construction method to generate, decompose, and refine API tools for materials science. Additionally, HoneyComb leverages a retriever module that adaptively selects the appropriate knowledge source or tools for specific tasks, thereby ensuring accuracy and relevance. Our results demonstrate that HoneyComb significantly outperforms baseline models across various tasks in materials science, effectively bridging the gap between current LLM capabilities and the specialized needs of this domain. Furthermore, our adaptable framework can be easily extended to other scientific domains, highlighting its potential for broad applicability in advancing scientific research and applications.},
+      selected = {true},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      abbr = {Under review, EMNLP 2024},
+      dimensions = {false},
+      pdf = {https://arxiv.org/pdf/2409.00135},
+      preview = {honeycomb.png},
+      journal = {The 2024 Conference on Empirical Methods in Natural Language Processing.}
+}
+
+@article{song2023honeybee,
       title={HoneyBee: Progressive Instruction Finetuning of Large Language Models for Materials Science}, 
       author={Yu Song and Santiago Miret and Huan Zhang and Bang Liu},
       year={2023},
