--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@ Buttons:
 - `altmetric`: Adds an [Altmetric](https://www.altmetric.com/) badge (Note: if DOI is provided just use `true`, otherwise only add the altmetric identifier here - the link is generated automatically)
 - `dimensions`: Adds a [Dimensions](https://www.dimensions.ai/) badge (Note: if DOI or PMID is provided just use `true`, otherwise only add the Dimensions' identifier here - the link is generated automatically)
 
-@article{song2023honeybee,
+@article{szhang2024honeycomb,
       title={HoneyComb: A Flexible LLM-Based Agent System for Materials Science}, 
       author={Huan Zhang and Yu Song and Ziyu Hou and Santiago Miret and Bang Liu},
       year={2024},
@@ -30,7 +30,7 @@ Buttons:
       dimensions = {false},
       pdf = {https://arxiv.org/pdf/2409.00135},
       preview = {honeycomb.png},
-      journal = {The 2024 Conference on Empirical Methods in Natural Language Processing.}
+      journal = {arXiv preprint arXiv:2409.00135}
 }
 
 @article{song2023honeybee,
